@@ -21,6 +21,8 @@ Revision history for Text::Template
       undef as documented [28974]
     - Source code cleanups
     - Minimum perl version is now 5.8.0
+    - Allow start/end delimiters to be identical (e.g.: @@foo@@, XXfooXX)
+      (Thanks mirod) [46639]
     - Test suite cleanups:
         + turn on strict/warnings for all tests
         + run tests through perltidy and formatting cleanup
